samples/_failures_safe/1761298164_30cfce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf8329f3.c: In function ‘main’:
./samples/SAFE/__tmp_bf8329f3.c:151:9: error: expected declaration or statement at end of input
  151 |         }
      |         ^
./samples/SAFE/__tmp_bf8329f3.c:151:9: error: expected declaration or statement at end of input
